--- a/TransportAPI/YANG/.project
+++ b/TransportAPI/YANG/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
 	<name>TapiYang</name>
-	<comment></comment>
+	<comment>Eclipse project file to import TapiYang project to browse Yang files. The Yang files can be browsed/edited using the Xored Yang editor: https://github.com/xored/yang-ide/wiki/Installing</comment>
 	<projects>
 	</projects>
 	<buildSpec>
