Raw TAPI YANG files generated by the EAGLE xmi2yang tool (e95c9fb)

--- a/YANG/.settings/org.eclipse.core.resources.prefs
+++ b/YANG/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,3 @@
 eclipse.preferences.version=1
-encoding/Tapi.yang=UTF-8
-encoding/TapiTopology.yang=UTF-8
+encoding/tapi-common.yang=UTF-8
+encoding/tapi-topology.yang=UTF-8
