Updatedyang config file

--- a/YANG/config.json
+++ b/YANG/config.json
@@ -1,8 +1,9 @@
 {
   "tapi":{
     "namespace":"urn:onf:params:xml:ns:yang:",
-    "organization":"Open Networking Foundation (ONF)",
-    "contact":"Web: <https://wiki.opennetworking.org/display/OTCC/TAPI> \n Mailing List: mailto: OTCC Transport API <opentransport@opennetworking.org>, \n.Project-Lead: Karthik Sethuraman <karthik.sethuraman@necam.com>",
+    "organization":"Open Networking Foundation (ONF) - Open Transport Configuration & Control (OTCC)",
+    "contact":"\n        Project Web: <https://wiki.opennetworking.org/display/OTCC/TAPI>\n        Project List: <mailto:transport-api@opennetworking.org>",
+    "description" : "ONF Transport API",
     "withSuffix":false,
     "revision": {
       "date":"2018-02-15",
