--- a/yang-config.json
+++ b/yang-config.json
@@ -7,18 +7,18 @@
     "revision": [
 	    {
 	      "date":"2018-03-07",
-	      "description":"ONF Transport API version 2.0.2\n        This YANG module has been generated from the TAPI UML Model using the IISOMI-Eagle xmi2yang mapping tool.\n        <https://wiki.opennetworking.org/display/OIMT/IISOMI>\n        Changes in this revision: <https://github.com/OpenNetworkingFoundation/TAPI/blob/develop/CHANGE_LOG/change-log.2.0.2.md>",
-	      "reference":"ONF-TR-527, ONF-TR-512, ONF-TR-531, RFC 6020, RFC 6087 and ONF TAPI UML model\n                  <https://github.com/OpenNetworkingFoundation/TAPI/tree/develop/UML>"
+	      "description":"ONF Transport API version 2.0.2\n        This YANG module has been generated from the TAPI UML Model using the IISOMI-Eagle xmi2yang mapping tool.\n        Changes in this revision: <https://github.com/OpenNetworkingFoundation/TAPI/blob/develop/CHANGE_LOG/change-log.2.0.2.md>",
+	      "reference":"ONF-TR-527, ONF-TR-512, ONF-TR-531, RFC 6020, RFC 6087 and ONF TAPI UML model\n                  <https://github.com/OpenNetworkingFoundation/TAPI/tree/v2.0.2/UML>"
 	    },
 	    {
 	      "date":"2018-02-16",
-	      "description":"ONF Transport API version 2.0.1\n        This YANG module has been generated from the TAPI UML Model using the IISOMI-Eagle xmi2yang mapping tool.\n        <https://wiki.opennetworking.org/display/OIMT/IISOMI>\n        Changes in this revision: <https://github.com/OpenNetworkingFoundation/TAPI/blob/develop/CHANGE_LOG/change-log.2.0.1.md>",
-	      "reference":"ONF-TR-527, ONF-TR-512, ONF-TR-531, RFC 6020, RFC 6087 and ONF TAPI UML model\n                  <https://github.com/OpenNetworkingFoundation/TAPI/tree/develop/UML>"
+	      "description":"ONF Transport API version 2.0.1\n        This YANG module has been generated from the TAPI UML Model using the IISOMI-Eagle xmi2yang mapping tool.\n        Changes in this revision: <https://github.com/OpenNetworkingFoundation/TAPI/blob/develop/CHANGE_LOG/change-log.2.0.1.md>",
+	      "reference":"ONF-TR-527, ONF-TR-512, ONF-TR-531, RFC 6020, RFC 6087 and ONF TAPI UML model\n                  <https://github.com/OpenNetworkingFoundation/TAPI/tree/v2.0.1/UML>"
 	    },
 	    {
 	      "date":"2018-01-02",
-	      "description":"ONF Transport API version 2.0.0\n        This YANG module has been generated from the TAPI UML Model using the IISOMI-Eagle xmi2yang mapping tool.\n        <https://wiki.opennetworking.org/display/OIMT/IISOMI>\n        Changes in this revision: <https://github.com/OpenNetworkingFoundation/TAPI/blob/develop/CHANGE_LOG/change-log.2.0.0.md>",
-	      "reference":"ONF-TR-527, ONF-TR-512, ONF-TR-531, RFC 6020, RFC 6087 and ONF TAPI UML model\n                  <https://github.com/OpenNetworkingFoundation/TAPI/tree/develop/UML>"
+	      "description":"ONF Transport API version 2.0.0\n        This YANG module has been generated from the TAPI UML Model using the IISOMI-Eagle xmi2yang mapping tool.\n        Changes in this revision: <https://github.com/OpenNetworkingFoundation/TAPI/blob/develop/CHANGE_LOG/change-log.2.0.0.md>",
+	      "reference":"ONF-TR-527, ONF-TR-512, ONF-TR-531, RFC 6020, RFC 6087 and ONF TAPI UML model\n                  <https://github.com/OpenNetworkingFoundation/TAPI/tree/v2.0.0/UML>"
 	    }
     ],
     "prefix":{
