Xmi2Yang config file update for release 2.1

--- a/YANG/config-xmi2yang.json
+++ b/YANG/config-xmi2yang.json
@@ -5,6 +5,11 @@
     "contact":"\n        Project Web: <https://wiki.opennetworking.org/display/OTCC/TAPI>\n        Project List: <mailto:transport-api@opennetworking.org>\n        Editor: Karthik Sethuraman\n                <mailto:karthik.sethuraman@necam.com>",
     "withSuffix":false,
     "revision": [
+        {
+	      "date":"2018-08-31",
+	      "description":"ONF Transport API version 2.1.0\n        This YANG module has been generated from the TAPI UML Model using the IISOMI-Eagle xmi2yang mapping tool.\n        Changes in this revision: <https://github.com/OpenNetworkingFoundation/TAPI/blob/develop/CHANGE_LOG/change-log.2.1.0.md>",
+	      "reference":"ONF-TR-527, ONF-TR-512, ONF-TR-531, RFC 6020, RFC 6087 and ONF TAPI UML model\n                  <https://github.com/OpenNetworkingFoundation/TAPI/tree/v2.1.0/UML>"
+	    },
 	    {
 	      "date":"2018-03-07",
 	      "description":"ONF Transport API version 2.0.2\n        This YANG module has been generated from the TAPI UML Model using the IISOMI-Eagle xmi2yang mapping tool.\n        Changes in this revision: <https://github.com/OpenNetworkingFoundation/TAPI/blob/develop/CHANGE_LOG/change-log.2.0.2.md>",
