Updated OAS specs using v1.2.2 yang2swagger-tapi-cli

--- a/OAS/tapi-common@2018-08-31.yaml
+++ b/OAS/tapi-common@2018-08-31.yaml
@@ -23,6 +23,71 @@ paths:
             $ref: "#/definitions/tapi.common.TapiContext"
         400:
           description: "Internal error"
+    post:
+      tags:
+      - "tapi-common"
+      description: "creates tapi.common.TapiContext"
+      parameters:
+      - in: "body"
+        name: "tapi.common.TapiContext.body-param"
+        description: "tapi.common.TapiContext to be added to list"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.common.TapiContext"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        409:
+          description: "Object already exists"
+    put:
+      tags:
+      - "tapi-common"
+      description: "creates or updates tapi.common.TapiContext"
+      parameters:
+      - in: "body"
+        name: "tapi.common.TapiContext.body-param"
+        description: "tapi.common.TapiContext to be added or updated"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.common.TapiContext"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        204:
+          description: "Object modified"
+    delete:
+      tags:
+      - "tapi-common"
+      description: "removes tapi.common.TapiContext"
+      parameters: []
+      responses:
+        400:
+          description: "Internal error"
+        204:
+          description: "Object deleted"
+  /data/context/service-interface-point/:
+    post:
+      tags:
+      - "tapi-common"
+      description: "creates tapi.common.ServiceInterfacePoint"
+      parameters:
+      - in: "body"
+        name: "tapi.common.ServiceInterfacePoint.body-param"
+        description: "tapi.common.ServiceInterfacePoint to be added to list"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.common.ServiceInterfacePoint"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        409:
+          description: "Object already exists"
   /data/context/service-interface-point={uuid}/:
     get:
       tags:
@@ -41,6 +106,67 @@ paths:
             $ref: "#/definitions/tapi.common.ServiceInterfacePoint"
         400:
           description: "Internal error"
+    post:
+      tags:
+      - "tapi-common"
+      description: "creates tapi.common.ServiceInterfacePoint"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of service-interface-point"
+        required: true
+        type: "string"
+      - in: "body"
+        name: "tapi.common.ServiceInterfacePoint.body-param"
+        description: "tapi.common.ServiceInterfacePoint to be added to list"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.common.ServiceInterfacePoint"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        409:
+          description: "Object already exists"
+    put:
+      tags:
+      - "tapi-common"
+      description: "creates or updates tapi.common.ServiceInterfacePoint"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of service-interface-point"
+        required: true
+        type: "string"
+      - in: "body"
+        name: "tapi.common.ServiceInterfacePoint.body-param"
+        description: "tapi.common.ServiceInterfacePoint to be added or updated"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.common.ServiceInterfacePoint"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        204:
+          description: "Object modified"
+    delete:
+      tags:
+      - "tapi-common"
+      description: "removes tapi.common.ServiceInterfacePoint"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of service-interface-point"
+        required: true
+        type: "string"
+      responses:
+        400:
+          description: "Internal error"
+        204:
+          description: "Object deleted"
   /operations/get-service-interface-point-details/:
     post:
       tags:
