--- a/OAS/tapi-notification@2018-08-31.yaml
+++ b/OAS/tapi-notification@2018-08-31.yaml
@@ -23,6 +23,72 @@ paths:
             $ref: "#/definitions/tapi.common.Context"
         400:
           description: "Internal error"
+    post:
+      tags:
+      - "tapi-common"
+      description: "creates tapi.common.Context"
+      parameters:
+      - in: "body"
+        name: "tapi.common.Context.body-param"
+        description: "tapi.common.Context to be added to list"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.common.Context"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        409:
+          description: "Object already exists"
+    put:
+      tags:
+      - "tapi-common"
+      description: "creates or updates tapi.common.Context"
+      parameters:
+      - in: "body"
+        name: "tapi.common.Context.body-param"
+        description: "tapi.common.Context to be added or updated"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.common.Context"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        204:
+          description: "Object modified"
+    delete:
+      tags:
+      - "tapi-common"
+      description: "removes tapi.common.Context"
+      parameters: []
+      responses:
+        400:
+          description: "Internal error"
+        204:
+          description: "Object deleted"
+  /data/context/notif-subscription/:
+    post:
+      tags:
+      - "tapi-notification"
+      description: "creates tapi.notification.NotificationSubscriptionService"
+      parameters:
+      - in: "body"
+        name: "tapi.notification.NotificationSubscriptionService.body-param"
+        description: "tapi.notification.NotificationSubscriptionService to be added\
+          \ to list"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.notification.NotificationSubscriptionService"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        409:
+          description: "Object already exists"
   /data/context/notif-subscription={uuid}/:
     get:
       tags:
@@ -41,6 +107,69 @@ paths:
             $ref: "#/definitions/tapi.notification.NotificationSubscriptionService"
         400:
           description: "Internal error"
+    post:
+      tags:
+      - "tapi-notification"
+      description: "creates tapi.notification.NotificationSubscriptionService"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - in: "body"
+        name: "tapi.notification.NotificationSubscriptionService.body-param"
+        description: "tapi.notification.NotificationSubscriptionService to be added\
+          \ to list"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.notification.NotificationSubscriptionService"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        409:
+          description: "Object already exists"
+    put:
+      tags:
+      - "tapi-notification"
+      description: "creates or updates tapi.notification.NotificationSubscriptionService"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - in: "body"
+        name: "tapi.notification.NotificationSubscriptionService.body-param"
+        description: "tapi.notification.NotificationSubscriptionService to be added\
+          \ or updated"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.notification.NotificationSubscriptionService"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        204:
+          description: "Object modified"
+    delete:
+      tags:
+      - "tapi-notification"
+      description: "removes tapi.notification.NotificationSubscriptionService"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      responses:
+        400:
+          description: "Internal error"
+        204:
+          description: "Object deleted"
   /data/context/notif-subscription={uuid}/notification={notification-uuid}/:
     get:
       tags:
@@ -82,6 +211,25 @@ paths:
             $ref: "#/definitions/tapi.notification.Notification"
         400:
           description: "Internal error"
+  /data/context/service-interface-point/:
+    post:
+      tags:
+      - "tapi-common"
+      description: "creates tapi.common.ServiceInterfacePoint"
+      parameters:
+      - in: "body"
+        name: "tapi.common.ServiceInterfacePoint.body-param"
+        description: "tapi.common.ServiceInterfacePoint to be added to list"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.common.ServiceInterfacePoint"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        409:
+          description: "Object already exists"
   /data/context/service-interface-point={uuid}/:
     get:
       tags:
@@ -100,6 +248,67 @@ paths:
             $ref: "#/definitions/tapi.common.ServiceInterfacePoint"
         400:
           description: "Internal error"
+    post:
+      tags:
+      - "tapi-common"
+      description: "creates tapi.common.ServiceInterfacePoint"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of service-interface-point"
+        required: true
+        type: "string"
+      - in: "body"
+        name: "tapi.common.ServiceInterfacePoint.body-param"
+        description: "tapi.common.ServiceInterfacePoint to be added to list"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.common.ServiceInterfacePoint"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        409:
+          description: "Object already exists"
+    put:
+      tags:
+      - "tapi-common"
+      description: "creates or updates tapi.common.ServiceInterfacePoint"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of service-interface-point"
+        required: true
+        type: "string"
+      - in: "body"
+        name: "tapi.common.ServiceInterfacePoint.body-param"
+        description: "tapi.common.ServiceInterfacePoint to be added or updated"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.common.ServiceInterfacePoint"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        204:
+          description: "Object modified"
+    delete:
+      tags:
+      - "tapi-common"
+      description: "removes tapi.common.ServiceInterfacePoint"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of service-interface-point"
+        required: true
+        type: "string"
+      responses:
+        400:
+          description: "Internal error"
+        204:
+          description: "Object deleted"
   /operations/create-notification-subscription-service/:
     post:
       tags:
