--- a/OAS/tapi-path-computation@2018-08-31.yaml
+++ b/OAS/tapi-path-computation@2018-08-31.yaml
@@ -24,6 +24,72 @@ paths:
             $ref: "#/definitions/tapi.common.Context"
         400:
           description: "Internal error"
+    post:
+      tags:
+      - "tapi-common"
+      description: "creates tapi.common.Context"
+      parameters:
+      - in: "body"
+        name: "tapi.common.Context.body-param"
+        description: "tapi.common.Context to be added to list"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.common.Context"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        409:
+          description: "Object already exists"
+    put:
+      tags:
+      - "tapi-common"
+      description: "creates or updates tapi.common.Context"
+      parameters:
+      - in: "body"
+        name: "tapi.common.Context.body-param"
+        description: "tapi.common.Context to be added or updated"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.common.Context"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        204:
+          description: "Object modified"
+    delete:
+      tags:
+      - "tapi-common"
+      description: "removes tapi.common.Context"
+      parameters: []
+      responses:
+        400:
+          description: "Internal error"
+        204:
+          description: "Object deleted"
+  /data/context/notif-subscription/:
+    post:
+      tags:
+      - "tapi-notification"
+      description: "creates tapi.notification.NotificationSubscriptionService"
+      parameters:
+      - in: "body"
+        name: "tapi.notification.NotificationSubscriptionService.body-param"
+        description: "tapi.notification.NotificationSubscriptionService to be added\
+          \ to list"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.notification.NotificationSubscriptionService"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        409:
+          description: "Object already exists"
   /data/context/notif-subscription={uuid}/:
     get:
       tags:
@@ -42,6 +108,69 @@ paths:
             $ref: "#/definitions/tapi.notification.NotificationSubscriptionService"
         400:
           description: "Internal error"
+    post:
+      tags:
+      - "tapi-notification"
+      description: "creates tapi.notification.NotificationSubscriptionService"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - in: "body"
+        name: "tapi.notification.NotificationSubscriptionService.body-param"
+        description: "tapi.notification.NotificationSubscriptionService to be added\
+          \ to list"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.notification.NotificationSubscriptionService"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        409:
+          description: "Object already exists"
+    put:
+      tags:
+      - "tapi-notification"
+      description: "creates or updates tapi.notification.NotificationSubscriptionService"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - in: "body"
+        name: "tapi.notification.NotificationSubscriptionService.body-param"
+        description: "tapi.notification.NotificationSubscriptionService to be added\
+          \ or updated"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.notification.NotificationSubscriptionService"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        204:
+          description: "Object modified"
+    delete:
+      tags:
+      - "tapi-notification"
+      description: "removes tapi.notification.NotificationSubscriptionService"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      responses:
+        400:
+          description: "Internal error"
+        204:
+          description: "Object deleted"
   /data/context/notif-subscription={uuid}/notification={notification-uuid}/:
     get:
       tags:
@@ -96,6 +225,26 @@ paths:
             $ref: "#/definitions/tapi.topology.NetworkTopologyService"
         400:
           description: "Internal error"
+  /data/context/path-comp-service/:
+    post:
+      tags:
+      - "tapi-path-computation"
+      description: "creates tapi.path.computation.PathComputationService"
+      parameters:
+      - in: "body"
+        name: "tapi.path.computation.PathComputationService.body-param"
+        description: "tapi.path.computation.PathComputationService to be added to\
+          \ list"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.path.computation.PathComputationService"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        409:
+          description: "Object already exists"
   /data/context/path-comp-service={uuid}/:
     get:
       tags:
@@ -114,6 +263,69 @@ paths:
             $ref: "#/definitions/tapi.path.computation.PathComputationService"
         400:
           description: "Internal error"
+    post:
+      tags:
+      - "tapi-path-computation"
+      description: "creates tapi.path.computation.PathComputationService"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of path-comp-service"
+        required: true
+        type: "string"
+      - in: "body"
+        name: "tapi.path.computation.PathComputationService.body-param"
+        description: "tapi.path.computation.PathComputationService to be added to\
+          \ list"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.path.computation.PathComputationService"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        409:
+          description: "Object already exists"
+    put:
+      tags:
+      - "tapi-path-computation"
+      description: "creates or updates tapi.path.computation.PathComputationService"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of path-comp-service"
+        required: true
+        type: "string"
+      - in: "body"
+        name: "tapi.path.computation.PathComputationService.body-param"
+        description: "tapi.path.computation.PathComputationService to be added or\
+          \ updated"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.path.computation.PathComputationService"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        204:
+          description: "Object modified"
+    delete:
+      tags:
+      - "tapi-path-computation"
+      description: "removes tapi.path.computation.PathComputationService"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of path-comp-service"
+        required: true
+        type: "string"
+      responses:
+        400:
+          description: "Internal error"
+        204:
+          description: "Object deleted"
   /data/context/path={uuid}/:
     get:
       tags:
@@ -132,6 +344,25 @@ paths:
             $ref: "#/definitions/tapi.path.computation.Path"
         400:
           description: "Internal error"
+  /data/context/service-interface-point/:
+    post:
+      tags:
+      - "tapi-common"
+      description: "creates tapi.common.ServiceInterfacePoint"
+      parameters:
+      - in: "body"
+        name: "tapi.common.ServiceInterfacePoint.body-param"
+        description: "tapi.common.ServiceInterfacePoint to be added to list"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.common.ServiceInterfacePoint"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        409:
+          description: "Object already exists"
   /data/context/service-interface-point={uuid}/:
     get:
       tags:
@@ -150,6 +381,67 @@ paths:
             $ref: "#/definitions/tapi.common.ServiceInterfacePoint"
         400:
           description: "Internal error"
+    post:
+      tags:
+      - "tapi-common"
+      description: "creates tapi.common.ServiceInterfacePoint"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of service-interface-point"
+        required: true
+        type: "string"
+      - in: "body"
+        name: "tapi.common.ServiceInterfacePoint.body-param"
+        description: "tapi.common.ServiceInterfacePoint to be added to list"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.common.ServiceInterfacePoint"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        409:
+          description: "Object already exists"
+    put:
+      tags:
+      - "tapi-common"
+      description: "creates or updates tapi.common.ServiceInterfacePoint"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of service-interface-point"
+        required: true
+        type: "string"
+      - in: "body"
+        name: "tapi.common.ServiceInterfacePoint.body-param"
+        description: "tapi.common.ServiceInterfacePoint to be added or updated"
+        required: false
+        schema:
+          $ref: "#/definitions/tapi.common.ServiceInterfacePoint"
+      responses:
+        201:
+          description: "Object created"
+        400:
+          description: "Internal error"
+        204:
+          description: "Object modified"
+    delete:
+      tags:
+      - "tapi-common"
+      description: "removes tapi.common.ServiceInterfacePoint"
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of service-interface-point"
+        required: true
+        type: "string"
+      responses:
+        400:
+          description: "Internal error"
+        204:
+          description: "Object deleted"
   /data/context/topology={uuid}/:
     get:
       tags:
