Updated frequency unit to MHz in comments & OpenModelAttr stereotype
- also removed associated value ranges for above also specified in
OpenModelAttribute stereotype

--- a/OAS/tapi-photonic-media@2018-08-31.yaml
+++ b/OAS/tapi-photonic-media@2018-08-31.yaml
@@ -4163,7 +4163,7 @@ definitions:
     - "G_25GHZ"
     - "G_12_5GHZ"
     - "G_6_25GHZ"
-    - "G_3_125"
+    - "G_3_125GHZ"
     - "UNCONSTRAINED"
   tapi.photonic.media.ApplicationIdentifier:
     type: "object"
