As per review comments, added spectrum property to OtsiConfig pac
- also fixed the descriptions for central-frequency &
frequency-constraint to remove ITU-T formula to calculate
nominal-central-frequency based on channel spacing as this not used in
TAPI anymore.

--- a/OAS/tapi-photonic-media@2018-08-31.yaml
+++ b/OAS/tapi-photonic-media@2018-08-31.yaml
@@ -4429,6 +4429,9 @@ definitions:
       modulation:
         description: "The modulation techniqu selected at the source."
         $ref: "#/definitions/tapi.photonic.media.ModulationTechnique"
+      spectrum:
+        description: "none"
+        $ref: "#/definitions/tapi.photonic.media.SpectrumBand"
       laser-control:
         description: "Laser control can be FORCED-ON, FORCED-OFF or LASER-SHUTDOWN"
         $ref: "#/definitions/tapi.photonic.media.LaserControlType"
