Updated TAPI 2.1 YANG revision date to 10/03/2018

--- a/YANG/config-xmi2yang.json
+++ b/YANG/config-xmi2yang.json
@@ -6,9 +6,9 @@
     "withSuffix":false,
     "revision": [
         {
-	      "date":"2018-08-31",
-	      "description":"ONF Transport API version 2.1.0\n        This YANG module has been generated from the TAPI UML Model using the IISOMI-Eagle xmi2yang mapping tool.\n        Changes in this revision: <https://github.com/OpenNetworkingFoundation/TAPI/blob/develop/CHANGE_LOG/change-log.2.1.0.md>",
-	      "reference":"ONF-TR-527, ONF-TR-512, ONF-TR-531, RFC 6020, RFC 6087 and ONF TAPI UML model\n                  <https://github.com/OpenNetworkingFoundation/TAPI/tree/v2.1.0/UML>"
+	      "date":"2018-10-03",
+	      "description":"ONF Transport API version 2.1.0\n        This YANG module has been generated from the TAPI UML Model initally using the IISOMI-Eagle xmi2yang mapping tool and further edited manually to comply with the IISOMI UML2YANG mapping guidelines.\n        Changes in this revision: <https://github.com/OpenNetworkingFoundation/TAPI/blob/develop/CHANGE_LOG/change-log.2.1.0.md>",
+	      "reference":"ONF-TR-527, ONF-TR-512, ONF-TR-531, RFC 7950, RFC 6087 and ONF TAPI UML model\n                  <https://github.com/OpenNetworkingFoundation/TAPI/tree/v2.1.0/UML>"
 	    },
 	    {
 	      "date":"2018-03-07",
