Fix #372: Generated .tree & .oas files from the updated yang files

--- a/OAS/tapi-dsr@2018-10-16.yaml
+++ b/OAS/tapi-dsr@2018-10-16.yaml
@@ -5250,7 +5250,7 @@ paths:
             $ref: "#/definitions/tapi.common.TimeInterval"
         400:
           description: "Internal error"
-  /data/context/oam-context/oam-job={uuid}/pm-current-data={local-id}/elapsed-time/period/:
+  /data/context/oam-context/oam-job={uuid}/pm-current-data={local-id}/elapsed-time/period={unit}/:
     get:
       tags:
       - "tapi-oam"
@@ -5264,6 +5264,11 @@ paths:
       - name: "local-id"
         in: "path"
         description: "Id of pm-current-data"
+        required: true
+        type: "string"
+      - name: "unit"
+        in: "path"
+        description: "Id of period"
         required: true
         type: "string"
       responses:
@@ -15506,10 +15511,8 @@ definitions:
         items:
           $ref: "#/definitions/tapi.connectivity.ConnectivityServiceEndPoint"
       resilience-constraint:
-        type: "array"
         description: "none"
-        items:
-          $ref: "#/definitions/tapi.connectivity.ResilienceConstraint"
+        $ref: "#/definitions/tapi.connectivity.ResilienceConstraint"
       routing-constraint:
         description: "none"
         $ref: "#/definitions/tapi.path.computation.RoutingConstraint"
@@ -15579,10 +15582,8 @@ definitions:
         description: "none"
         $ref: "#/definitions/tapi.connectivity.ConnectivityServiceEndPoint"
       resilience-constraint:
-        type: "array"
         description: "none"
-        items:
-          $ref: "#/definitions/tapi.connectivity.ResilienceConstraint"
+        $ref: "#/definitions/tapi.connectivity.ResilienceConstraint"
       routing-constraint:
         description: "none"
         $ref: "#/definitions/tapi.path.computation.RoutingConstraint"
