--- a/OAS/tapi-odu@2018-10-16.yaml
+++ b/OAS/tapi-odu@2018-10-16.yaml
@@ -5572,7 +5572,7 @@ paths:
             $ref: "#/definitions/tapi.common.TimeInterval"
         400:
           description: "Internal error"
-  /data/context/oam-context/oam-job={uuid}/pm-current-data={local-id}/elapsed-time/period/:
+  /data/context/oam-context/oam-job={uuid}/pm-current-data={local-id}/elapsed-time/period={unit}/:
     get:
       tags:
       - "tapi-oam"
@@ -5586,6 +5586,11 @@ paths:
       - name: "local-id"
         in: "path"
         description: "Id of pm-current-data"
+        required: true
+        type: "string"
+      - name: "unit"
+        in: "path"
+        description: "Id of period"
         required: true
         type: "string"
       responses:
@@ -16059,8 +16064,8 @@ definitions:
   tapi.connectivity.ceplist.ConnectionEndPoint:
     allOf:
     - $ref: "#/definitions/tapi.connectivity.ConnectionEndPoint"
-    - $ref: "#/definitions/tapi.oam.ConnectionEndPointAugmentation1"
-    - $ref: "#/definitions/tapi.odu.ConnectionEndPointAugmentation2"
+    - $ref: "#/definitions/tapi.oam.ConnectionEndPointAugmentation2"
+    - $ref: "#/definitions/tapi.odu.ConnectionEndPointAugmentation1"
   tapi.connectivity.context.topologycontext.topology.node.ownednodeedgepoint.CepList:
     allOf:
     - type: "object"
@@ -16083,10 +16088,8 @@ definitions:
         items:
           $ref: "#/definitions/tapi.connectivity.ConnectivityServiceEndPoint"
       resilience-constraint:
-        type: "array"
         description: "none"
-        items:
-          $ref: "#/definitions/tapi.connectivity.ResilienceConstraint"
+        $ref: "#/definitions/tapi.connectivity.ResilienceConstraint"
       routing-constraint:
         description: "none"
         $ref: "#/definitions/tapi.path.computation.RoutingConstraint"
@@ -16156,10 +16159,8 @@ definitions:
         description: "none"
         $ref: "#/definitions/tapi.connectivity.ConnectivityServiceEndPoint"
       resilience-constraint:
-        type: "array"
         description: "none"
-        items:
-          $ref: "#/definitions/tapi.connectivity.ResilienceConstraint"
+        $ref: "#/definitions/tapi.connectivity.ResilienceConstraint"
       routing-constraint:
         description: "none"
         $ref: "#/definitions/tapi.path.computation.RoutingConstraint"
@@ -16585,7 +16586,7 @@ definitions:
       subscription-service:
         description: "none"
         $ref: "#/definitions/tapi.notification.NotificationSubscriptionService"
-  tapi.oam.ConnectionEndPointAugmentation1:
+  tapi.oam.ConnectionEndPointAugmentation2:
     type: "object"
     properties:
       mep-mip-list:
@@ -17271,7 +17272,7 @@ definitions:
       end-point:
         description: "none"
         $ref: "#/definitions/tapi.oam.OamServiceEndPoint"
-  tapi.odu.ConnectionEndPointAugmentation2:
+  tapi.odu.ConnectionEndPointAugmentation1:
     type: "object"
     properties:
       odu-connection-end-point-spec:
