--- a/OAS/tapi-oam@2018-10-16.yaml
+++ b/OAS/tapi-oam@2018-10-16.yaml
@@ -5250,7 +5250,7 @@ paths:
             $ref: "#/definitions/tapi.common.TimeInterval"
         400:
           description: "Internal error"
-  /data/context/oam-context/oam-job={uuid}/pm-current-data={local-id}/elapsed-time/period/:
+  /data/context/oam-context/oam-job={uuid}/pm-current-data={local-id}/elapsed-time/period={unit}/:
     get:
       tags:
       - "tapi-oam"
@@ -5264,6 +5264,11 @@ paths:
       - name: "local-id"
         in: "path"
         description: "Id of pm-current-data"
+        required: true
+        type: "string"
+      - name: "unit"
+        in: "path"
+        description: "Id of period"
         required: true
         type: "string"
       responses:
@@ -14734,8 +14739,8 @@ definitions:
     allOf:
     - $ref: "#/definitions/tapi.common.TapiContext"
     - $ref: "#/definitions/tapi.connectivity.ContextAugmentation4"
-    - $ref: "#/definitions/tapi.notification.ContextAugmentation1"
-    - $ref: "#/definitions/tapi.oam.ContextAugmentation2"
+    - $ref: "#/definitions/tapi.notification.ContextAugmentation2"
+    - $ref: "#/definitions/tapi.oam.ContextAugmentation1"
     - $ref: "#/definitions/tapi.path.computation.ContextAugmentation3"
     - $ref: "#/definitions/tapi.topology.ContextAugmentation5"
   tapi.common.DirectiveValue:
@@ -15506,10 +15511,8 @@ definitions:
         items:
           $ref: "#/definitions/tapi.connectivity.ConnectivityServiceEndPoint"
       resilience-constraint:
-        type: "array"
         description: "none"
-        items:
-          $ref: "#/definitions/tapi.connectivity.ResilienceConstraint"
+        $ref: "#/definitions/tapi.connectivity.ResilienceConstraint"
       routing-constraint:
         description: "none"
         $ref: "#/definitions/tapi.path.computation.RoutingConstraint"
@@ -15579,10 +15582,8 @@ definitions:
         description: "none"
         $ref: "#/definitions/tapi.connectivity.ConnectivityServiceEndPoint"
       resilience-constraint:
-        type: "array"
         description: "none"
-        items:
-          $ref: "#/definitions/tapi.connectivity.ResilienceConstraint"
+        $ref: "#/definitions/tapi.connectivity.ResilienceConstraint"
       routing-constraint:
         description: "none"
         $ref: "#/definitions/tapi.path.computation.RoutingConstraint"
@@ -15614,7 +15615,7 @@ definitions:
         type: "boolean"
         description: "none"
         default: false
-  tapi.notification.ContextAugmentation1:
+  tapi.notification.ContextAugmentation2:
     type: "object"
     properties:
       notification-context:
@@ -16017,7 +16018,7 @@ definitions:
     x-augmentation:
       prefix: "tapi-oam"
       namespace: "urn:onf:otcc:yang:tapi-oam"
-  tapi.oam.ContextAugmentation2:
+  tapi.oam.ContextAugmentation1:
     type: "object"
     properties:
       oam-context:
