Manual fix for missing ConnectivityService definition

--- a/OAS/tapi-photonic-media@2018-10-16.yaml
+++ b/OAS/tapi-photonic-media@2018-10-16.yaml
@@ -18500,7 +18500,7 @@ definitions:
           $ref: "#/definitions/tapi.connectivity.ConnectivityServiceRef"
       service-level:
         type: "string"
-        description: "An abstract value the meaning of which is mutually agreed –\
+        description: "An abstract value the meaning of which is mutually agreed ï¿½\
           \ typically represents metrics such as - Class of service, priority, resiliency,\
           \ availability"
       service-type:
@@ -18522,6 +18522,27 @@ definitions:
         description: "none"
         items:
           $ref: "#/definitions/tapi.connectivity.Connection"
+  tapi.connectivity.ConnectivityService:
+    allOf:
+    - $ref: "#/definitions/tapi.common.AdminStatePac"
+    - $ref: "#/definitions/tapi.common.GlobalClass"
+    - $ref: "#/definitions/tapi.connectivity.ConnectivityConstraint"
+    - $ref: "#/definitions/tapi.connectivity.ResilienceConstraint"
+    - $ref: "#/definitions/tapi.path.computation.RoutingConstraint"
+    - $ref: "#/definitions/tapi.path.computation.TopologyConstraint"
+    - type: "object"
+      properties:
+        end-point:
+          type: "array"
+          description: "none"
+          items:
+            $ref: "#/definitions/tapi.connectivity.connectivityservice.EndPoint"
+        connection:
+          type: "array"
+          description: "none"
+          items:
+            $ref: "#/definitions/tapi.connectivity.ConnectionRef"
+      description: "none"
   tapi.connectivity.ConnectivityServiceEndPoint:
     allOf:
     - $ref: "#/definitions/tapi.common.AdminStatePac"
@@ -19842,13 +19863,13 @@ definitions:
           type: "boolean"
           description: "This attribute is used to indicate that the performance data\
             \ for the current period may not be reliable. Some reasons for this to\
-            \ occur are:\r\n                    – Suspect data were detected by the\
-            \ actual resource doing data collection.\r\n                    – Transition\
+            \ occur are:\r\n                    ï¿½ Suspect data were detected by the\
+            \ actual resource doing data collection.\r\n                    ï¿½ Transition\
             \ of the administrativeState attribute to/from the 'lock' state.\r\n \
-            \                   – Transition of the operationalState to/from the 'disabled'\
-            \ state.\r\n                    – Scheduler setting that inhibits the\
-            \ collection function.\r\n                    – The performance counters\
-            \ were reset during the interval.\r\n                    – The currentData\
+            \                   ï¿½ Transition of the operationalState to/from the 'disabled'\
+            \ state.\r\n                    ï¿½ Scheduler setting that inhibits the\
+            \ collection function.\r\n                    ï¿½ The performance counters\
+            \ were reset during the interval.\r\n                    ï¿½ The currentData\
             \ (or subclass) object instance was created during the monitoring period."
           default: false
         timestamp:
