Fix #196: Added getConnectionEndPointDetails RPC to tapi-connectivity

--- a/OAS/tapi-odu@2018-10-16.yaml
+++ b/OAS/tapi-odu@2018-10-16.yaml
@@ -14738,6 +14738,27 @@ paths:
           description: "No response"
         400:
           description: "Internal error"
+  /operations/get-connection-end-point-details/:
+    post:
+      tags:
+      - "tapi-connectivity"
+      parameters:
+      - in: "body"
+        name: "tapi.connectivity.getconnectionendpointdetails.Input.body-param"
+        required: false
+        schema:
+          properties:
+            input:
+              $ref: "#/definitions/tapi.connectivity.getconnectionendpointdetails.Input"
+      responses:
+        200:
+          description: "Correct response"
+          schema:
+            $ref: "#/definitions/tapi.connectivity.GetConnectionEndPointDetails"
+        201:
+          description: "No response"
+        400:
+          description: "Internal error"
   /operations/get-connectivity-service-details/:
     post:
       tags:
@@ -15830,6 +15851,11 @@ definitions:
     properties:
       output:
         $ref: "#/definitions/tapi.connectivity.getconnectiondetails.Output"
+  tapi.connectivity.GetConnectionEndPointDetails:
+    type: "object"
+    properties:
+      output:
+        $ref: "#/definitions/tapi.connectivity.getconnectionendpointdetails.Output"
   tapi.connectivity.GetConnectivityServiceDetails:
     type: "object"
     properties:
@@ -16114,9 +16140,6 @@ definitions:
   tapi.connectivity.getconnectiondetails.Input:
     type: "object"
     properties:
-      service-id-or-name:
-        type: "string"
-        description: "none"
       connection-id-or-name:
         type: "string"
         description: "none"
@@ -16126,6 +16149,27 @@ definitions:
       connection:
         description: "none"
         $ref: "#/definitions/tapi.connectivity.Connection"
+  tapi.connectivity.getconnectionendpointdetails.Input:
+    type: "object"
+    properties:
+      cep-id-or-name:
+        type: "string"
+        description: "none"
+      nep-id-or-name:
+        type: "string"
+        description: "none"
+      node-id-or-name:
+        type: "string"
+        description: "none"
+      topology-id-or-name:
+        type: "string"
+        description: "none"
+  tapi.connectivity.getconnectionendpointdetails.Output:
+    type: "object"
+    properties:
+      connection-end-point:
+        description: "none"
+        $ref: "#/definitions/tapi.connectivity.ConnectionEndPoint"
   tapi.connectivity.getconnectivityservicedetails.Input:
     type: "object"
     properties:
@@ -16156,8 +16200,10 @@ definitions:
         description: "none"
         $ref: "#/definitions/tapi.path.computation.TopologyConstraint"
       end-point:
+        type: "array"
         description: "none"
-        $ref: "#/definitions/tapi.connectivity.ConnectivityServiceEndPoint"
+        items:
+          $ref: "#/definitions/tapi.connectivity.ConnectivityServiceEndPoint"
       resilience-constraint:
         description: "none"
         $ref: "#/definitions/tapi.connectivity.ResilienceConstraint"
