--- a/OAS/tapi-eth@2018-10-16.yaml
+++ b/OAS/tapi-eth@2018-10-16.yaml
@@ -18964,6 +18964,27 @@ paths:
           description: "No response"
         400:
           description: "Internal error"
+  /operations/get-connection-end-point-details/:
+    post:
+      tags:
+      - "tapi-connectivity"
+      parameters:
+      - in: "body"
+        name: "tapi.connectivity.getconnectionendpointdetails.Input.body-param"
+        required: false
+        schema:
+          properties:
+            input:
+              $ref: "#/definitions/tapi.connectivity.getconnectionendpointdetails.Input"
+      responses:
+        200:
+          description: "Correct response"
+          schema:
+            $ref: "#/definitions/tapi.connectivity.GetConnectionEndPointDetails"
+        201:
+          description: "No response"
+        400:
+          description: "Internal error"
   /operations/get-connectivity-service-details/:
     post:
       tags:
@@ -20056,6 +20077,11 @@ definitions:
     properties:
       output:
         $ref: "#/definitions/tapi.connectivity.getconnectiondetails.Output"
+  tapi.connectivity.GetConnectionEndPointDetails:
+    type: "object"
+    properties:
+      output:
+        $ref: "#/definitions/tapi.connectivity.getconnectionendpointdetails.Output"
   tapi.connectivity.GetConnectivityServiceDetails:
     type: "object"
     properties:
@@ -20340,9 +20366,6 @@ definitions:
   tapi.connectivity.getconnectiondetails.Input:
     type: "object"
     properties:
-      service-id-or-name:
-        type: "string"
-        description: "none"
       connection-id-or-name:
         type: "string"
         description: "none"
@@ -20352,6 +20375,27 @@ definitions:
       connection:
         description: "none"
         $ref: "#/definitions/tapi.connectivity.Connection"
+  tapi.connectivity.getconnectionendpointdetails.Input:
+    type: "object"
+    properties:
+      cep-id-or-name:
+        type: "string"
+        description: "none"
+      nep-id-or-name:
+        type: "string"
+        description: "none"
+      node-id-or-name:
+        type: "string"
+        description: "none"
+      topology-id-or-name:
+        type: "string"
+        description: "none"
+  tapi.connectivity.getconnectionendpointdetails.Output:
+    type: "object"
+    properties:
+      connection-end-point:
+        description: "none"
+        $ref: "#/definitions/tapi.connectivity.ConnectionEndPoint"
   tapi.connectivity.getconnectivityservicedetails.Input:
     type: "object"
     properties:
@@ -20382,8 +20426,10 @@ definitions:
         description: "none"
         $ref: "#/definitions/tapi.path.computation.TopologyConstraint"
       end-point:
+        type: "array"
         description: "none"
-        $ref: "#/definitions/tapi.connectivity.ConnectivityServiceEndPoint"
+        items:
+          $ref: "#/definitions/tapi.connectivity.ConnectivityServiceEndPoint"
       resilience-constraint:
         description: "none"
         $ref: "#/definitions/tapi.connectivity.ResilienceConstraint"
@@ -21529,31 +21575,13 @@ definitions:
   tapi.eth.OamJobAugmentation1:
     type: "object"
     properties:
-      eth-pro-active-1way-measurement-job:
+      eth-loopback-job:
         description: "none"
-        $ref: "#/definitions/tapi.eth.EthProActive1wayMeasurementJob"
+        $ref: "#/definitions/tapi.eth.EthLoopbackJob"
     x-augmentation:
       prefix: "tapi-eth"
       namespace: "urn:onf:otcc:yang:tapi-eth"
   tapi.eth.OamJobAugmentation2:
-    type: "object"
-    properties:
-      eth-on-demand-1way-measurement-job:
-        description: "none"
-        $ref: "#/definitions/tapi.eth.EthOnDemand1wayMeasurementJob"
-    x-augmentation:
-      prefix: "tapi-eth"
-      namespace: "urn:onf:otcc:yang:tapi-eth"
-  tapi.eth.OamJobAugmentation3:
-    type: "object"
-    properties:
-      eth-link-trace-job:
-        description: "none"
-        $ref: "#/definitions/tapi.eth.EthLinkTraceJob"
-    x-augmentation:
-      prefix: "tapi-eth"
-      namespace: "urn:onf:otcc:yang:tapi-eth"
-  tapi.eth.OamJobAugmentation4:
     type: "object"
     properties:
       eth-on-demand-2way-measurement-job:
@@ -21562,30 +21590,48 @@ definitions:
     x-augmentation:
       prefix: "tapi-eth"
       namespace: "urn:onf:otcc:yang:tapi-eth"
+  tapi.eth.OamJobAugmentation3:
+    type: "object"
+    properties:
+      eth-on-demand-1way-measurement-job:
+        description: "none"
+        $ref: "#/definitions/tapi.eth.EthOnDemand1wayMeasurementJob"
+    x-augmentation:
+      prefix: "tapi-eth"
+      namespace: "urn:onf:otcc:yang:tapi-eth"
+  tapi.eth.OamJobAugmentation4:
+    type: "object"
+    properties:
+      eth-pro-active-2way-measurement-job:
+        description: "none"
+        $ref: "#/definitions/tapi.eth.EthProActive2wayMeasurementJob"
+    x-augmentation:
+      prefix: "tapi-eth"
+      namespace: "urn:onf:otcc:yang:tapi-eth"
   tapi.eth.OamJobAugmentation5:
     type: "object"
     properties:
-      eth-loopback-job:
+      eth-pro-active-1way-measurement-job:
         description: "none"
-        $ref: "#/definitions/tapi.eth.EthLoopbackJob"
+        $ref: "#/definitions/tapi.eth.EthProActive1wayMeasurementJob"
     x-augmentation:
       prefix: "tapi-eth"
       namespace: "urn:onf:otcc:yang:tapi-eth"
   tapi.eth.OamJobAugmentation6:
     type: "object"
     properties:
-      eth-test-job:
+      eth-link-trace-job:
         description: "none"
-        $ref: "#/definitions/tapi.eth.EthTestJob"
+        $ref: "#/definitions/tapi.eth.EthLinkTraceJob"
     x-augmentation:
       prefix: "tapi-eth"
       namespace: "urn:onf:otcc:yang:tapi-eth"
   tapi.eth.OamJobAugmentation7:
     type: "object"
     properties:
-      eth-pro-active-2way-measurement-job:
+      eth-test-job:
         description: "none"
-        $ref: "#/definitions/tapi.eth.EthProActive2wayMeasurementJob"
+        $ref: "#/definitions/tapi.eth.EthTestJob"
     x-augmentation:
       prefix: "tapi-eth"
       namespace: "urn:onf:otcc:yang:tapi-eth"
@@ -21658,31 +21704,13 @@ definitions:
   tapi.eth.PmCurrentDataAugmentation1:
     type: "object"
     properties:
-      eth-pro-active-lm-performance-data:
+      eth-loopback-result-data:
         description: "none"
-        $ref: "#/definitions/tapi.eth.EthProActiveLmPerformanceData"
+        $ref: "#/definitions/tapi.eth.EthLoopbackResultData"
     x-augmentation:
       prefix: "tapi-eth"
       namespace: "urn:onf:otcc:yang:tapi-eth"
   tapi.eth.PmCurrentDataAugmentation10:
-    type: "object"
-    properties:
-      eth-on-demand-1-lm-performance-data:
-        description: "none"
-        $ref: "#/definitions/tapi.eth.EthOnDemand1LmPerformanceData"
-    x-augmentation:
-      prefix: "tapi-eth"
-      namespace: "urn:onf:otcc:yang:tapi-eth"
-  tapi.eth.PmCurrentDataAugmentation11:
-    type: "object"
-    properties:
-      eth-pro-active-1-lm-performance-data:
-        description: "none"
-        $ref: "#/definitions/tapi.eth.EthProActive1LmPerformanceData"
-    x-augmentation:
-      prefix: "tapi-eth"
-      namespace: "urn:onf:otcc:yang:tapi-eth"
-  tapi.eth.PmCurrentDataAugmentation2:
     type: "object"
     properties:
       eth-on-demand-dm-performance-data:
@@ -21691,16 +21719,7 @@ definitions:
     x-augmentation:
       prefix: "tapi-eth"
       namespace: "urn:onf:otcc:yang:tapi-eth"
-  tapi.eth.PmCurrentDataAugmentation3:
-    type: "object"
-    properties:
-      eth-loopback-result-data:
-        description: "none"
-        $ref: "#/definitions/tapi.eth.EthLoopbackResultData"
-    x-augmentation:
-      prefix: "tapi-eth"
-      namespace: "urn:onf:otcc:yang:tapi-eth"
-  tapi.eth.PmCurrentDataAugmentation4:
+  tapi.eth.PmCurrentDataAugmentation11:
     type: "object"
     properties:
       eth-pro-active-1-dm-performance-data:
@@ -21709,34 +21728,7 @@ definitions:
     x-augmentation:
       prefix: "tapi-eth"
       namespace: "urn:onf:otcc:yang:tapi-eth"
-  tapi.eth.PmCurrentDataAugmentation5:
-    type: "object"
-    properties:
-      eth-on-demand-1-dm-performance-data:
-        description: "none"
-        $ref: "#/definitions/tapi.eth.EthOnDemand1DmPerformanceData"
-    x-augmentation:
-      prefix: "tapi-eth"
-      namespace: "urn:onf:otcc:yang:tapi-eth"
-  tapi.eth.PmCurrentDataAugmentation6:
-    type: "object"
-    properties:
-      eth-pro-active-dm-performance-data:
-        description: "none"
-        $ref: "#/definitions/tapi.eth.EthProActiveDmPerformanceData"
-    x-augmentation:
-      prefix: "tapi-eth"
-      namespace: "urn:onf:otcc:yang:tapi-eth"
-  tapi.eth.PmCurrentDataAugmentation7:
-    type: "object"
-    properties:
-      eth-test-result-data:
-        description: "none"
-        $ref: "#/definitions/tapi.eth.EthTestResultData"
-    x-augmentation:
-      prefix: "tapi-eth"
-      namespace: "urn:onf:otcc:yang:tapi-eth"
-  tapi.eth.PmCurrentDataAugmentation8:
+  tapi.eth.PmCurrentDataAugmentation2:
     type: "object"
     properties:
       eth-link-trace-result-data:
@@ -21745,16 +21737,16 @@ definitions:
     x-augmentation:
       prefix: "tapi-eth"
       namespace: "urn:onf:otcc:yang:tapi-eth"
-  tapi.eth.PmCurrentDataAugmentation9:
+  tapi.eth.PmCurrentDataAugmentation3:
     type: "object"
     properties:
-      eth-on-demand-lm-performance-data:
+      eth-test-result-data:
         description: "none"
-        $ref: "#/definitions/tapi.eth.EthOnDemandLmPerformanceData"
+        $ref: "#/definitions/tapi.eth.EthTestResultData"
     x-augmentation:
       prefix: "tapi-eth"
       namespace: "urn:onf:otcc:yang:tapi-eth"
-  tapi.eth.PmHistoryDataAugmentation1:
+  tapi.eth.PmCurrentDataAugmentation4:
     type: "object"
     properties:
       eth-on-demand-1-dm-performance-data:
@@ -21763,25 +21755,7 @@ definitions:
     x-augmentation:
       prefix: "tapi-eth"
       namespace: "urn:onf:otcc:yang:tapi-eth"
-  tapi.eth.PmHistoryDataAugmentation2:
-    type: "object"
-    properties:
-      eth-on-demand-dm-performance-data:
-        description: "none"
-        $ref: "#/definitions/tapi.eth.EthOnDemandDmPerformanceData"
-    x-augmentation:
-      prefix: "tapi-eth"
-      namespace: "urn:onf:otcc:yang:tapi-eth"
-  tapi.eth.PmHistoryDataAugmentation3:
-    type: "object"
-    properties:
-      eth-pro-active-1-lm-performance-data:
-        description: "none"
-        $ref: "#/definitions/tapi.eth.EthProActive1LmPerformanceData"
-    x-augmentation:
-      prefix: "tapi-eth"
-      namespace: "urn:onf:otcc:yang:tapi-eth"
-  tapi.eth.PmHistoryDataAugmentation4:
+  tapi.eth.PmCurrentDataAugmentation5:
     type: "object"
     properties:
       eth-pro-active-dm-performance-data:
@@ -21790,25 +21764,7 @@ definitions:
     x-augmentation:
       prefix: "tapi-eth"
       namespace: "urn:onf:otcc:yang:tapi-eth"
-  tapi.eth.PmHistoryDataAugmentation5:
-    type: "object"
-    properties:
-      eth-on-demand-lm-performance-data:
-        description: "none"
-        $ref: "#/definitions/tapi.eth.EthOnDemandLmPerformanceData"
-    x-augmentation:
-      prefix: "tapi-eth"
-      namespace: "urn:onf:otcc:yang:tapi-eth"
-  tapi.eth.PmHistoryDataAugmentation6:
-    type: "object"
-    properties:
-      eth-pro-active-lm-performance-data:
-        description: "none"
-        $ref: "#/definitions/tapi.eth.EthProActiveLmPerformanceData"
-    x-augmentation:
-      prefix: "tapi-eth"
-      namespace: "urn:onf:otcc:yang:tapi-eth"
-  tapi.eth.PmHistoryDataAugmentation7:
+  tapi.eth.PmCurrentDataAugmentation6:
     type: "object"
     properties:
       eth-on-demand-1-lm-performance-data:
@@ -21817,7 +21773,79 @@ definitions:
     x-augmentation:
       prefix: "tapi-eth"
       namespace: "urn:onf:otcc:yang:tapi-eth"
-  tapi.eth.PmHistoryDataAugmentation8:
+  tapi.eth.PmCurrentDataAugmentation7:
+    type: "object"
+    properties:
+      eth-on-demand-lm-performance-data:
+        description: "none"
+        $ref: "#/definitions/tapi.eth.EthOnDemandLmPerformanceData"
+    x-augmentation:
+      prefix: "tapi-eth"
+      namespace: "urn:onf:otcc:yang:tapi-eth"
+  tapi.eth.PmCurrentDataAugmentation8:
+    type: "object"
+    properties:
+      eth-pro-active-lm-performance-data:
+        description: "none"
+        $ref: "#/definitions/tapi.eth.EthProActiveLmPerformanceData"
+    x-augmentation:
+      prefix: "tapi-eth"
+      namespace: "urn:onf:otcc:yang:tapi-eth"
+  tapi.eth.PmCurrentDataAugmentation9:
+    type: "object"
+    properties:
+      eth-pro-active-1-lm-performance-data:
+        description: "none"
+        $ref: "#/definitions/tapi.eth.EthProActive1LmPerformanceData"
+    x-augmentation:
+      prefix: "tapi-eth"
+      namespace: "urn:onf:otcc:yang:tapi-eth"
+  tapi.eth.PmHistoryDataAugmentation1:
+    type: "object"
+    properties:
+      eth-on-demand-dm-performance-data:
+        description: "none"
+        $ref: "#/definitions/tapi.eth.EthOnDemandDmPerformanceData"
+    x-augmentation:
+      prefix: "tapi-eth"
+      namespace: "urn:onf:otcc:yang:tapi-eth"
+  tapi.eth.PmHistoryDataAugmentation2:
+    type: "object"
+    properties:
+      eth-on-demand-1-lm-performance-data:
+        description: "none"
+        $ref: "#/definitions/tapi.eth.EthOnDemand1LmPerformanceData"
+    x-augmentation:
+      prefix: "tapi-eth"
+      namespace: "urn:onf:otcc:yang:tapi-eth"
+  tapi.eth.PmHistoryDataAugmentation3:
+    type: "object"
+    properties:
+      eth-pro-active-lm-performance-data:
+        description: "none"
+        $ref: "#/definitions/tapi.eth.EthProActiveLmPerformanceData"
+    x-augmentation:
+      prefix: "tapi-eth"
+      namespace: "urn:onf:otcc:yang:tapi-eth"
+  tapi.eth.PmHistoryDataAugmentation4:
+    type: "object"
+    properties:
+      eth-on-demand-1-dm-performance-data:
+        description: "none"
+        $ref: "#/definitions/tapi.eth.EthOnDemand1DmPerformanceData"
+    x-augmentation:
+      prefix: "tapi-eth"
+      namespace: "urn:onf:otcc:yang:tapi-eth"
+  tapi.eth.PmHistoryDataAugmentation5:
+    type: "object"
+    properties:
+      eth-pro-active-dm-performance-data:
+        description: "none"
+        $ref: "#/definitions/tapi.eth.EthProActiveDmPerformanceData"
+    x-augmentation:
+      prefix: "tapi-eth"
+      namespace: "urn:onf:otcc:yang:tapi-eth"
+  tapi.eth.PmHistoryDataAugmentation6:
     type: "object"
     properties:
       eth-pro-active-1-dm-performance-data:
@@ -21826,21 +21854,39 @@ definitions:
     x-augmentation:
       prefix: "tapi-eth"
       namespace: "urn:onf:otcc:yang:tapi-eth"
+  tapi.eth.PmHistoryDataAugmentation7:
+    type: "object"
+    properties:
+      eth-pro-active-1-lm-performance-data:
+        description: "none"
+        $ref: "#/definitions/tapi.eth.EthProActive1LmPerformanceData"
+    x-augmentation:
+      prefix: "tapi-eth"
+      namespace: "urn:onf:otcc:yang:tapi-eth"
+  tapi.eth.PmHistoryDataAugmentation8:
+    type: "object"
+    properties:
+      eth-on-demand-lm-performance-data:
+        description: "none"
+        $ref: "#/definitions/tapi.eth.EthOnDemandLmPerformanceData"
+    x-augmentation:
+      prefix: "tapi-eth"
+      namespace: "urn:onf:otcc:yang:tapi-eth"
   tapi.eth.PmThresholdDataAugmentation1:
     type: "object"
     properties:
-      eth-1-lm-threshold-data:
+      eth-lm-threshold-data:
         description: "none"
-        $ref: "#/definitions/tapi.eth.Eth1LmThresholdData"
+        $ref: "#/definitions/tapi.eth.EthLmThresholdData"
     x-augmentation:
       prefix: "tapi-eth"
       namespace: "urn:onf:otcc:yang:tapi-eth"
   tapi.eth.PmThresholdDataAugmentation2:
     type: "object"
     properties:
-      eth-lm-threshold-data:
+      eth-dm-threshold-data:
         description: "none"
-        $ref: "#/definitions/tapi.eth.EthLmThresholdData"
+        $ref: "#/definitions/tapi.eth.EthDmThresholdData"
     x-augmentation:
       prefix: "tapi-eth"
       namespace: "urn:onf:otcc:yang:tapi-eth"
@@ -21856,9 +21902,9 @@ definitions:
   tapi.eth.PmThresholdDataAugmentation4:
     type: "object"
     properties:
-      eth-dm-threshold-data:
+      eth-1-lm-threshold-data:
         description: "none"
-        $ref: "#/definitions/tapi.eth.EthDmThresholdData"
+        $ref: "#/definitions/tapi.eth.Eth1LmThresholdData"
     x-augmentation:
       prefix: "tapi-eth"
       namespace: "urn:onf:otcc:yang:tapi-eth"
